# Rust-Prisma-Boilerplate

./: Cargo.toml  README.md
prisma/: schema.prisma
